# lardataalg

./: CMakeLists.txt
cmakeConfig/: CMakeLists.txt  lardataalg-fragment.cmake.in
lardataalg/DetectorInfo/: CMakeLists.txt
lardataalg/Dumpers/: CMakeLists.txt
lardataalg/Dumpers/RawData/: CMakeLists.txt
lardataalg/MCDumpers/: CMakeLists.txt
lardataalg/Utilities/: CMakeLists.txt
test/DetectorInfo/: CMakeLists.txt
test/Utilities/: CMakeLists.txt
